Revert "made some progress on SRS"
This reverts commit ea9df304d1900d6523f76484b11fb9b49d484de8.